Add endpoint to fetch timestamps for previous payments
Auditors: jbn, atm, jbr
